--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.3.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "react-router-dom": "^6.2.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
